djn logos add back djn logo, fix spacing

--- a/app/assets/stylesheets/modules/custom.scss
+++ b/app/assets/stylesheets/modules/custom.scss
@@ -1074,9 +1074,24 @@ body.blacklight-catalog-home {
     .daily-logo {
       width: 294.2px;
       background-color: #e6f3ff;
+    }
+
+    .djnews-logo {
+      width: 400px;
+      background-color: #e6f3ff;
     }  
 
+    .djnews-foundation-logo {
+      width: 325px;
+      background-color: #e6f3ff;
+    } 
+
     .mlibrary-logo {
+      width: 243px;
+      background-color: #e6f3ff;
+    }
+
+    .midaily-mlibrary-logo {
       width: 243px;
       background-color: #e6f3ff;
       margin-left: 50px;
@@ -1085,7 +1100,7 @@ body.blacklight-catalog-home {
     .bentley-logo {
       width: 538px;
       background-color: #e6f3ff;
-      margin-left: 50px;
+      margin-left: 55px;
     }
 
     a {
